# COMP371

./: .gitignore  .gitmodules  CMakeLists.txt
lib/assimp-5.0.1/code/Assjson/: json_exporter.cpp
lib/assimp-5.0.1/code/X/: XFileParser.cpp
lib/assimp-5.0.1/contrib/gtest/src/: gtest.cc
lib/assimp-5.0.1/contrib/rapidjson/include/rapidjson/: reader.h
lib/assimp-5.0.1/contrib/rapidjson/include/rapidjson/internal/: dtoa.h  strtod.h
lib/assimp-5.0.1/include/assimp/: fast_atof.h
lib/assimp-5.0.1/scripts/StepImporter/: schema_ap203e2_mim_lf.exp
lib/libnoise/: CMakeLists.txt  README.md
res/models/: alphanumeric_elements.csv  alphanumeric_vertices.csv
res/shaders/: SimpleRed.shader  chunk_scene.frag  chunk_scene.vert  chunk_shadow.frag  chunk_shadow.vert  cube.frag  cube.vert  grid.frag  grid.vert  line.vert  model.vert  scene.frag  scene.vert  shadow.frag  shadow.vert  sphere.frag  sphere.vert
src/: camera.h  grid.h  line.h  main.cpp  mesh.cpp  mesh.h  objvertexparser.py  texture.cpp
src/Grid/: grid.cpp  grid.h
src/Mesh/: mesh.cpp  mesh.h
src/Utilities/: camera.cpp  camera.h  chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  mesh.cpp  mesh.h  mesh_m.cpp  mesh_m.h  model.cpp  model.h  player.cpp  player.h  stb_image.h  terrain.cpp  terrain.h  texture.cpp  voxel.cpp  voxel.h
